antlrDemo/StitchParser.java
// Generated from Stitch.g4 by ANTLR 4.7.1

import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StitchParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODULE=1, IMPORT=2, LIB=3, MODEL=4, OP=5, AS=6, TACTIC=7, CONDITION=8, 
		ACTION=9, EFFECT=10, ERROR=11, STRATEGY=12, DEFINE=13, FUNCTION=14, SUCCESS=15, 
		FAILURE=16, DEFAULT=17, NULLTACTIC=18, DO=19, DONE=20, IF=21, ELSE=22, 
		FOR=23, WHILE=24, OBJECT=25, INT=26, FLOAT=27, BOOLEAN=28, CHAR=29, STRING=30, 
		SET=31, SEQUENCE=32, RECORD=33, ENUM=34, FORALL=35, EXISTS=36, UNIQUE=37, 
		SELECT=38, AND=39, OR=40, IN=41, TRUE=42, FALSE=43, NULL=44, IDENTIFIER=45, 
		SL_COMMENT=46, ML_COMMENT=47, INTEGER_LIT=48, FLOAT_LIT=49, STRING_LIT=50, 
		CHAR_LIT=51, LPAREN=52, RPAREN=53, LBRACKET=54, RBRACKET=55, LBRACE=56, 
		RBRACE=57, COLON=58, SEMICOLON=59, COMMA=60, DOT=61, DQUOTE=62, SQUOTE=63, 
		BSLASH=64, BAR=65, HASH=66, AT=67, DOLLAR=68, ASSIGN=69, PLUS_ASSIGN=70, 
		MINUS_ASSIGN=71, STAR_ASSIGN=72, DIV_ASSIGN=73, MOD_ASSIGN=74, COLON_BANG=75, 
		LOGICAL_OR=76, LOGICAL_AND=77, EQ=78, NE=79, LT=80, LE=81, GE=82, GT=83, 
		PLUS=84, MINUS=85, STAR=86, SLASH=87, MOD=88, INCR=89, DECR=90, LOGICAL_NOT=91, 
		IMPLIES=92, IFF=93, LETTER=94, DIGIT=95, UNDERSCORE=96, NL=97, WS=98, 
		TYPE=99, EXISTS_UNIQUE=100, UNARY_MINUS=101, UNARY_PLUS=102, POST_INCR=103, 
		POST_DECR=104, DO_UNSPEC=105, EMPTY_STMT=106, STMT_LIST=107, EXRR_LIST=108, 
		STRATEGY_BRANCH=109, METHOD_CALL=110, IMPORT_LIB=111, IMPORT_MODEL=112, 
		IMPORT_OP=113;
	public static final int
		RULE_script = 0, RULE_importSt = 1, RULE_importRename = 2, RULE_functions = 3, 
		RULE_tactic = 4, RULE_tacticParams = 5, RULE_tacticParam = 6, RULE_vars = 7, 
		RULE_var = 8, RULE_condition = 9, RULE_action = 10, RULE_effect = 11, 
		RULE_strategy = 12, RULE_strategyNode = 13, RULE_strategyCond = 14, RULE_tacticRef = 15, 
		RULE_strategyBranch = 16, RULE_statement = 17, RULE_errorHandler = 18, 
		RULE_ifStmt = 19, RULE_whileStmt = 20, RULE_forStmt = 21, RULE_forInit = 22, 
		RULE_forCond = 23, RULE_forIter = 24, RULE_expressions = 25, RULE_expression = 26, 
		RULE_assignmentExpression = 27, RULE_booleanExpression = 28, RULE_impliesExpression = 29, 
		RULE_iffExpression = 30, RULE_logicalOrExpression = 31, RULE_logicalAndExpression = 32, 
		RULE_equalityExpression = 33, RULE_relationalExpression = 34, RULE_additiveExpression = 35, 
		RULE_multiplicativeExpression = 36, RULE_unaryExpression = 37, RULE_primaryExpression = 38, 
		RULE_idExpression = 39, RULE_postIdExpression = 40, RULE_methodCall = 41, 
		RULE_params = 42, RULE_param = 43, RULE_quantifiedExpression = 44, RULE_nonLiteralIdExpression = 45, 
		RULE_setExpression = 46, RULE_pathExpression = 47, RULE_pathExpressionContinuation = 48, 
		RULE_literalSet = 49, RULE_dataType = 50;
	public static final String[] ruleNames = {
		"script", "importSt", "importRename", "functions", "tactic", "tacticParams", 
		"tacticParam", "vars", "var", "condition", "action", "effect", "strategy", 
		"strategyNode", "strategyCond", "tacticRef", "strategyBranch", "statement", 
		"errorHandler", "ifStmt", "whileStmt", "forStmt", "forInit", "forCond", 
		"forIter", "expressions", "expression", "assignmentExpression", "booleanExpression", 
		"impliesExpression", "iffExpression", "logicalOrExpression", "logicalAndExpression", 
		"equalityExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "primaryExpression", "idExpression", "postIdExpression", 
		"methodCall", "params", "param", "quantifiedExpression", "nonLiteralIdExpression", 
		"setExpression", "pathExpression", "pathExpressionContinuation", "literalSet", 
		"dataType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'module'", "'import'", "'lib'", "'model'", "'op'", "'as'", "'tactic'", 
		"'condition'", "'action'", "'effect'", "'error'", "'strategy'", "'define'", 
		"'function'", "'success'", "'failure'", "'default'", "'TNULL'", "'do'", 
		"'done'", "'if'", "'else'", "'for'", "'while'", "'object'", "'int'", "'float'", 
		"'boolean'", "'char'", "'string'", "'set'", "'sequence'", "'record'", 
		"'enum'", "'forall'", "'exists'", "'unique'", "'select'", "'and'", "'or'", 
		"'in'", "'true'", "'false'", "'null'", null, null, null, null, null, null, 
		null, "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "';'", "','", "'.'", 
		"'\"'", "'''", "'\\'", "'|'", "'#'", "'@'", "'$'", "'='", "'+='", "'-='", 
		"'*='", "'/='", "'%='", "':!'", null, null, "'=='", "'!='", "'<'", "'<='", 
		"'>='", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'!'", 
		"'->'", "'<->'", null, null, "'_'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "MODULE", "IMPORT", "LIB", "MODEL", "OP", "AS", "TACTIC", "CONDITION", 
		"ACTION", "EFFECT", "ERROR", "STRATEGY", "DEFINE", "FUNCTION", "SUCCESS", 
		"FAILURE", "DEFAULT", "NULLTACTIC", "DO", "DONE", "IF", "ELSE", "FOR", 
		"WHILE", "OBJECT", "INT", "FLOAT", "BOOLEAN", "CHAR", "STRING", "SET", 
		"SEQUENCE", "RECORD", "ENUM", "FORALL", "EXISTS", "UNIQUE", "SELECT", 
		"AND", "OR", "IN", "TRUE", "FALSE", "NULL", "IDENTIFIER", "SL_COMMENT", 
		"ML_COMMENT", "INTEGER_LIT", "FLOAT_LIT", "STRING_LIT", "CHAR_LIT", "LPAREN", 
		"RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "COLON", "SEMICOLON", 
		"COMMA", "DOT", "DQUOTE", "SQUOTE", "BSLASH", "BAR", "HASH", "AT", "DOLLAR", 
		"ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", "DIV_ASSIGN", 
		"MOD_ASSIGN", "COLON_BANG", "LOGICAL_OR", "LOGICAL_AND", "EQ", "NE", "LT", 
		"LE", "GE", "GT", "PLUS", "MINUS", "STAR", "SLASH", "MOD", "INCR", "DECR", 
		"LOGICAL_NOT", "IMPLIES", "IFF", "LETTER", "DIGIT", "UNDERSCORE", "NL", 
		"WS", "TYPE", "EXISTS_UNIQUE", "UNARY_MINUS", "UNARY_PLUS", "POST_INCR", 
		"POST_DECR", "DO_UNSPEC", "EMPTY_STMT", "STMT_LIST", "EXRR_LIST", "STRATEGY_BRANCH", 
		"METHOD_CALL", "IMPORT_LIB", "IMPORT_MODEL", "IMPORT_OP"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Stitch.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		//ALI: ADDED stitchProblemHandler to parser
		private ArrayList<String> definedTactics = new ArrayList<String>();

		public ArrayList<String> getDefinedTactics() {
			return definedTactics;
		}

		public void defineTactic (Token id) {
		  definedTactics.add (id.getText ());
		}

	public StitchParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public Token i;
		public TerminalNode MODULE() { return getToken(StitchParser.MODULE, 0); }
		public TerminalNode SEMICOLON() { return getToken(StitchParser.SEMICOLON, 0); }
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(StitchParser.EOF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(StitchParser.IDENTIFIER, 0); }
		public List<ImportStContext> importSt() {
			return getRuleContexts(ImportStContext.class);
		}
		public ImportStContext importSt(int i) {
			return getRuleContext(ImportStContext.class,i);
		}
		public List<TacticContext> tactic() {
			return getRuleContexts(TacticContext.class);
		}
		public TacticContext tactic(int i) {
			return getRuleContext(TacticContext.class,i);
		}
		public List<StrategyContext> strategy() {
			return getRuleContexts(StrategyContext.class);
		}
		public StrategyContext strategy(int i) {
			return getRuleContext(StrategyContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StitchVisitor ) return ((StitchVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(MODULE);
			setState(103);
			((ScriptContext)_localctx).i = match(IDENTIFIER);
			setState(104);
			match(SEMICOLON);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(105);
				importSt();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			functions();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TACTIC) {
				{
				{
				setState(112);
				tactic();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRATEGY) {
				{
				{
				setState(118);
				strategy();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStContext extends ParserRuleContext {
		public Token i;
		public Token tl;
		public Token tm;
		public Token to;
		public Token s;
		public TerminalNode SEMICOLON() { return getToken(StitchParser.SEMICOLON, 0); }
		public TerminalNode IMPORT() { return getToken(StitchParser.IMPORT, 0); }
		public TerminalNode STRING_LIT() { return getToken(StitchParser.STRING_LIT, 0); }
		public TerminalNode LIB() { return getToken(StitchParser.LIB, 0); }
		public TerminalNode MODEL() { return getToken(StitchParser.MODEL, 0); }
		public TerminalNode OP() { return getToken(StitchParser.OP, 0); }
		public TerminalNode LBRACE() { return getToken(StitchParser.LBRACE, 0); }
		public List<ImportRenameContext> importRename() {
			return getRuleContexts(ImportRenameContext.class);
		}
		public ImportRenameContext importRename(int i) {
			return getRuleContext(ImportRenameContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(StitchParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(StitchParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StitchParser.COMMA, i);
		}
		public ImportStContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StitchVisitor ) return ((StitchVisitor<? extends T>)visitor).visitImportSt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStContext importSt() throws RecognitionException {
		ImportStContext _localctx = new ImportStContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importSt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			((ImportStContext)_localctx).i = match(IMPORT);
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LIB:
				{
				setState(127);
				((ImportStContext)_localctx).tl = match(LIB);
				((CommonToken )((ImportStContext)_localctx).i).setType(IMPORT_LIB);
				}
				break;
			case MODEL:
				{
				setState(129);
				((ImportStContext)_localctx).tm = match(MODEL);
				((CommonToken )((ImportStContext)_localctx).i).setType(IMPORT_MODEL);
				}
				break;
			case OP:
				{
				setState(131);
				((ImportStContext)_localctx).to = match(OP);
				((CommonToken )((ImportStContext)_localctx).i).setType(IMPORT_OP); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(135);
			((ImportStContext)_localctx).s = match(STRING_LIT);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(136);
				match(LBRACE);
				setState(137);
				importRename();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(138);
					match(COMMA);
					setState(139);
					importRename();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(RBRACE);
				}
			}

			setState(149);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportRenameContext extends ParserRuleContext {
		public Token id1;
		public Token id2;
		public TerminalNode AS() { return getToken(StitchParser.AS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(StitchParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(StitchParser.IDENTIFIER, i);
		}
		public ImportRenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importRename; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StitchVisitor ) return ((StitchVisitor<? extends T>)visitor).visitImportRename(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportRenameContext importRename() throws RecognitionException {
		ImportRenameContext _localctx = new ImportRenameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importRename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			((ImportRenameContext)_localctx).id1 = match(IDENTIFIER);
			setState(152);
			match(AS);
			setState(153);
			((ImportRenameContext)_localctx).id2 = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(StitchParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(StitchParser.SEMICOLON, i);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StitchVisitor ) return ((StitchVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(155);
					var();
					setState(156);
					match(SEMICOLON);
					}
					} 
				}
				setState(162);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TacticContext extends ParserRuleContext {
		public Token id;
		public TerminalNode TACTIC() { return getToken(StitchParser.TACTIC, 0); }
		public TerminalNode LPAREN() { return getToken(StitchParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(StitchParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(StitchParser.LBRACE, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public EffectContext effect() {
			return getRuleContext(EffectContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(StitchParser.RBRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(StitchParser.IDENTIFIER, 0); }
		public TacticParamsContext tacticParams() {
			return getRuleContext(TacticParamsContext.class,0);
		}
		public TacticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tactic; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StitchVisitor ) return ((StitchVisitor<? extends T>)visitor).visitTactic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TacticContext tactic() throws RecognitionException {
		TacticContext _localctx = new TacticContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tactic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(TACTIC);
			setState(164);
			((TacticContext)_localctx).id = match(IDENTIFIER);
			setState(165);
			match(LPAREN);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OBJECT) | (1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << CHAR) | (1L << STRING) | (1L << SET) | (1L << SEQUENCE) | (1L << RECORD) | (1L << ENUM) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(166);
				tacticParams();
				}
			}
